# BookQtcreator

./: .gitignore  Bookicon.txt  CMakeLists.txt  CMakeLists.txt.user.6e74fb4  CMakeLists.txt.user.907b123  Doxyfile.in  README.md  api_logic.cpp  api_logic.h  apiparameters.cpp  apiparameters.h  book.cpp  book.h  bookdetailswindow.cpp  bookdetailswindow.h  clickableLabel.cpp  clickableLabel.h  homepage.cpp  homepage.h  homepage.ui  jsonparse.cpp  jsonparse.h  main.cpp  searchresultwindow.cpp  searchresultwindow.h  searchresultwindow.ui
test/: test_apiLogic.cpp  test_apiLogic.h  test_apiParameters.cpp  test_apiParameters.h  test_book.cpp  test_book.h  test_bookDetailswindow.cpp  test_bookDetailswindow.h  test_homePage.cpp  test_homePage.h  test_jsonParse.cpp  test_jsonParse.h  test_main.cpp  test_searchResultwindow.cpp  test_searchResultwindow.h  testings.cpp  testings.h
